[metadata]
name = radarwave
version = 0.0.1
author = Michael Ridgill
author_email = mike@mikeridgill.com
description = Support using X-band radar measurements to analyse sea surface waves 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikeridgill/radarwave
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent


[options]
packages = find:
